--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 * {
     margin: 0;
@@ -18,8 +18,8 @@ div {
 /* Navbar and information */
 .navbar-brand header h1 {
     font-family: 'Roboto', sans-serif;
-    font-size: 28px;
-    font-weight: 800;
+    font-size: 32px;
+    font-weight: 700;
 }
 
 
@@ -72,11 +72,15 @@ div {
 } */
 
 /* Curriculum Header */
+.center {
+    margin-top: 150px;
+}
+
 .jumbotron-header .jumbotron{
     margin-top: 0px;
+    width: 100%;
+    height: 770px;
     border: 1px solid #DEE1E5;
-    border-radius: 10px;
-    box-shadow: 4px 5px 5px #DEE1E5;
 }
 
 .img-jumbotron {
@@ -84,7 +88,7 @@ div {
 }
 
 .img-jumbotron img{
-    width: 15%;
+    width: 23%;
     height: auto;
     border-radius: 50%;
     border: 1px solid #2c2c2c;
@@ -98,12 +102,33 @@ div {
 }
 
 .line-jumbotron {
-    margin: 10px 250px;
-    width: 610px;
+    margin: 10px 200px;
+    width: 710px;
     border: 1px solid #dcdcdc;
 }
 
 .jumbotron-header p{
     font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
+}
+
+/* SEARCH */
+.bg-search {
+    margin-top: 60px;
+    padding: 0;
+    box-shadow: 4px 5px 5px #DEE1E5;
+}
+
+/* navigation */
+.navigation {
+    margin-top: -32px;
+    padding: 16px 8px;
+    background-color: #343A40;
+}
+
+.navigation ul li a {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    color: #fff;
 }
