--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,700&display=swap');
 
 * {
     margin: 0;
@@ -112,18 +112,28 @@ div {
     font-size: 16px;
 }
 
-/* SEARCH */
-.bg-search {
-    margin-top: 60px;
+/* NAVIGATION ABOUT*/
+.navigation {
+    margin: -31px 0;
     padding: 0;
-    box-shadow: 4px 5px 5px #DEE1E5;
 }
 
-/* navigation */
-.navigation {
-    margin-top: -32px;
-    padding: 16px 8px;
-    background-color: #343A40;
+.navigation div h3 {
+    margin: 0;
+    padding: 8px 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 30px;
+    color: #fff;
+}
+
+.navigation div h3 .pound {
+    font-size: 50px;
+    font-style: italic;
+}
+
+.navigation div .letter{
+    font-size: 50px;
 }
 
 .navigation ul li a {
@@ -131,4 +141,14 @@ div {
     font-size: 20px;
     font-weight: 400;
     color: #fff;
+}
+
+/* CONTENT ABOUT */
+.about-content{
+    margin: 30px 0;
+    padding: 0;
+}
+
+.about-content .jumbotron header{
+    margin-bottom: -30px;
 }
