--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,9 @@ div {
 
 /* Navbar and information */
 .navbar-brand header h1 {
+    text-transform: uppercase;
     font-family: 'Roboto', sans-serif;
-    font-size: 32px;
+    font-size: 28px;
     font-weight: 700;
 }
 
@@ -120,23 +121,21 @@ div {
 
 .navigation div h3 {
     margin: 0;
-    padding: 8px 0;
+    padding: 16px 16px;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 30px;
     color: #fff;
 }
 
-.navigation div h3 .pound {
-    font-size: 50px;
-    font-style: italic;
-}
-
-.navigation div .letter{
-    font-size: 50px;
+.navigation h3 span{
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+    font-size: 23px;
 }
 
 .navigation ul li a {
+    text-transform: uppercase;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     font-weight: 400;
@@ -145,6 +144,58 @@ div {
 
 /* CONTENT ABOUT */
 .about-content{
-    margin: 0px 0;
+    margin: 120px 0;
+    height: 380px;
     padding: 0;
 }
+
+.about-content section {
+    margin: 50px 0;
+    padding: 0;
+}
+
+.about-content i {
+    margin-left: auto;
+    margin-right: 8px;
+    margin-bottom: 2px;
+    font-size: 30px;
+    color: #121416;
+}
+
+.about-content .line-about {
+    margin-left: auto;
+    margin-bottom: 20px;
+    margin-right: auto;
+    width: 280px;
+    border: 2px solid #343A40;
+}
+
+.about-content h4 {
+    margin-bottom: 2px;
+    text-transform: uppercase;
+    font-family: 'Roboto', sans-serif;
+    font-size: 27px;
+    font-weight: 700;
+    color: #343a40f5;
+}
+
+.about-content .especializacao {
+    margin-right: 5px;
+    font-size: 20px;
+}
+
+.about-content span {
+    text-align: center;
+    font-size: 18px;
+    font-weight: 900;
+}
+
+.section-about p{
+    margin-top: 0;
+    padding: 20px 10px 0;
+}
+
+/* .line-test {
+    width: 100%;
+    border: 1px solid black;
+} */
