--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,700&display=swap');
 
+@media (min-width: 480px) and (max-width: 768px){
 * {
     margin: 0;
     padding: 0;
@@ -25,13 +26,17 @@ div {
 
 
 .line {
-    margin: 10px 0px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
     border: 0.3px solid white;
     width: 100%;
 }
 
 .line-contact {
-    margin: 10px 0px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
     border: 0.3px solid white;
     width: 100%;
 }
@@ -74,7 +79,7 @@ div {
 
 /* Curriculum Header */
 .center {
-    margin-top: 150px;
+    margin-top: 50px;
 }
 
 .jumbotron-header .jumbotron{
@@ -89,7 +94,7 @@ div {
 }
 
 .img-jumbotron img{
-    width: 23%;
+    width: 30%;
     height: auto;
     border-radius: 50%;
     border: 1px solid #2c2c2c;
@@ -103,8 +108,10 @@ div {
 }
 
 .line-jumbotron {
-    margin: 10px 200px;
-    width: 710px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
     border: 1px solid #dcdcdc;
 }
 
@@ -199,3 +206,628 @@ div {
     width: 100%;
     border: 1px solid black;
 } */
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    
+    body {
+        font-family: 'Open Sans', 'Assistant', 'Roboto', sans-serif;
+    }
+    
+    div {
+        display: block;
+    }
+    
+    /* Navbar and information */
+    .navbar-brand header h1 {
+        text-transform: uppercase;
+        font-family: 'Roboto', sans-serif;
+        font-size: 28px;
+        font-weight: 700;
+    }
+    
+    
+    .line {
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        border: 0.3px solid white;
+        width: 100%;
+    }
+    
+    .line-contact {
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        border: 0.3px solid white;
+        width: 100%;
+    }
+    
+    .header-nav header h3 {
+        font-family: 'Roboto', sans-serif;
+        margin-top: 30px;
+        margin-bottom: 5px;
+        font-size: 22px;
+        font-weight: 600;
+        color: white;
+    }
+    
+    .header-nav p{
+        font-family: 'Open Sans', sans-serif;
+        margin-top: 15px;
+        margin-bottom: 30px;
+        font-size: 16px;
+        color: white;
+    }
+    
+    .header-nav p span {
+        line-height: 1.9em;
+    }
+    
+    .header-nav a {
+        color: #fff;
+        text-decoration: none;
+    }
+    
+    .header-nav a i, a span {
+        margin-right: 0px;
+        font-size: 18px;
+    
+    }
+    
+    /* .header-nav a span {
+       font-size: 20px;
+    } */
+    
+    /* Curriculum Header */
+    .center {
+        margin-top: 50px;
+    }
+    
+    .jumbotron-header .jumbotron{
+        margin-top: 0px;
+        width: 100%;
+        height: 770px;
+        border: 1px solid #DEE1E5;
+    }
+    
+    .img-jumbotron {
+        margin-bottom: 15px;
+    }
+    
+    .img-jumbotron img{
+        width: 30%;
+        height: auto;
+        border-radius: 50%;
+        border: 1px solid #2c2c2c;
+        box-shadow: 3px 3px 10px #848484;
+    }
+    
+    .jumbotron-header h2 {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 40px;
+        font-weight: 700;
+    }
+    
+    .line-jumbotron {
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        border: 1px solid #dcdcdc;
+    }
+    
+    .jumbotron-header p{
+        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
+    }
+    
+    /* NAVIGATION ABOUT*/
+    .navigation {
+        margin: -31px 0;
+        padding: 0;
+    }
+    
+    .navigation div h3 {
+        margin: 0;
+        padding: 16px 16px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 500;
+        font-size: 30px;
+        color: #fff;
+    }
+    
+    .navigation h3 span{
+        font-family: 'Roboto', sans-serif;
+        text-transform: uppercase;
+        font-size: 23px;
+    }
+    
+    .navigation ul li a {
+        text-transform: uppercase;
+        font-family: 'Roboto', sans-serif;
+        font-size: 20px;
+        font-weight: 400;
+        color: #fff;
+    }
+    
+    /* CONTENT ABOUT */
+    .about-content{
+        margin: 120px 0;
+        height: 380px;
+        padding: 0;
+    }
+    
+    .about-content section {
+        margin: 50px 0;
+        padding: 0;
+    }
+    
+    .about-content i {
+        margin-left: auto;
+        margin-right: 8px;
+        margin-bottom: 2px;
+        font-size: 30px;
+        color: #121416;
+    }
+    
+    .about-content .line-about {
+        margin-left: auto;
+        margin-bottom: 20px;
+        margin-right: auto;
+        width: 280px;
+        border: 2px solid #343A40;
+    }
+    
+    .about-content h4 {
+        margin-bottom: 2px;
+        text-transform: uppercase;
+        font-family: 'Roboto', sans-serif;
+        font-size: 27px;
+        font-weight: 700;
+        color: #343a40f5;
+    }
+    
+    .about-content .especializacao {
+        margin-right: 5px;
+        font-size: 20px;
+    }
+    
+    .about-content span {
+        text-align: center;
+        font-size: 18px;
+        font-weight: 900;
+    }
+    
+    .section-about p{
+        margin-top: 0;
+        padding: 20px 10px 0;
+    }
+    
+    /* .line-test {
+        width: 100%;
+        border: 1px solid black;
+    } */
+}
+
+@media (min-width: 1025px) and (max-width: 1200px) {
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    
+    body {
+        font-family: 'Open Sans', 'Assistant', 'Roboto', sans-serif;
+    }
+    
+    div {
+        display: block;
+    }
+    
+    /* Navbar and information */
+    .navbar-brand header h1 {
+        text-transform: uppercase;
+        font-family: 'Roboto', sans-serif;
+        font-size: 28px;
+        font-weight: 700;
+    }
+    
+    
+    .line {
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        border: 0.3px solid white;
+        width: 100%;
+    }
+    
+    .line-contact {
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        border: 0.3px solid white;
+        width: 100%;
+    }
+    
+    .header-nav header h3 {
+        font-family: 'Roboto', sans-serif;
+        margin-top: 30px;
+        margin-bottom: 5px;
+        font-size: 22px;
+        font-weight: 600;
+        color: white;
+    }
+    
+    .header-nav p{
+        font-family: 'Open Sans', sans-serif;
+        margin-top: 15px;
+        margin-bottom: 30px;
+        font-size: 16px;
+        color: white;
+    }
+    
+    .header-nav p span {
+        line-height: 1.9em;
+    }
+    
+    .header-nav a {
+        color: #fff;
+        text-decoration: none;
+    }
+    
+    .header-nav a i, a span {
+        margin-right: 0px;
+        font-size: 18px;
+    
+    }
+    
+    /* .header-nav a span {
+       font-size: 20px;
+    } */
+    
+    /* Curriculum Header */
+    .center {
+        margin-top: 50px;
+    }
+    
+    .jumbotron-header .jumbotron{
+        margin-top: 0px;
+        width: 100%;
+        height: 770px;
+        border: 1px solid #DEE1E5;
+    }
+    
+    .img-jumbotron {
+        margin-bottom: 15px;
+    }
+    
+    .img-jumbotron img{
+        width: 30%;
+        height: auto;
+        border-radius: 50%;
+        border: 1px solid #2c2c2c;
+        box-shadow: 3px 3px 10px #848484;
+    }
+    
+    .jumbotron-header h2 {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 40px;
+        font-weight: 700;
+    }
+    
+    .line-jumbotron {
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+        border: 1px solid #dcdcdc;
+    }
+    
+    .jumbotron-header p{
+        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
+    }
+    
+    /* NAVIGATION ABOUT*/
+    .navigation {
+        margin: -31px 0;
+        padding: 0;
+    }
+    
+    .navigation div h3 {
+        margin: 0;
+        padding: 16px 16px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 500;
+        font-size: 30px;
+        color: #fff;
+    }
+    
+    .navigation h3 span{
+        font-family: 'Roboto', sans-serif;
+        text-transform: uppercase;
+        font-size: 23px;
+    }
+    
+    .navigation ul li a {
+        text-transform: uppercase;
+        font-family: 'Roboto', sans-serif;
+        font-size: 20px;
+        font-weight: 400;
+        color: #fff;
+    }
+    
+    /* CONTENT ABOUT */
+    .about-content{
+        margin: 120px 0;
+        height: 380px;
+        padding: 0;
+    }
+    
+    .about-content section {
+        margin: 50px 0;
+        padding: 0;
+    }
+    
+    .about-content i {
+        margin-left: auto;
+        margin-right: 8px;
+        margin-bottom: 2px;
+        font-size: 30px;
+        color: #121416;
+    }
+    
+    .about-content .line-about {
+        margin-left: auto;
+        margin-bottom: 20px;
+        margin-right: auto;
+        width: 280px;
+        border: 2px solid #343A40;
+    }
+    
+    .about-content h4 {
+        margin-bottom: 2px;
+        text-transform: uppercase;
+        font-family: 'Roboto', sans-serif;
+        font-size: 27px;
+        font-weight: 700;
+        color: #343a40f5;
+    }
+    
+    .about-content .especializacao {
+        margin-right: 5px;
+        font-size: 20px;
+    }
+    
+    .about-content span {
+        text-align: center;
+        font-size: 18px;
+        font-weight: 900;
+    }
+    
+    .section-about p{
+        margin-top: 0;
+        padding: 20px 10px 0;
+    }
+    
+    /* .line-test {
+        width: 100%;
+        border: 1px solid black;
+    } */
+}
+
+@media (min-width: 1201px) {
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    
+    body {
+        font-family: 'Open Sans', 'Assistant', 'Roboto', sans-serif;
+    }
+    
+    div {
+        display: block;
+    }
+    
+    /* Navbar and information */
+    .navbar-brand header h1 {
+        text-transform: uppercase;
+        font-family: 'Roboto', sans-serif;
+        font-size: 28px;
+        font-weight: 700;
+    }
+    
+    
+    .line {
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        border: 0.3px solid white;
+        width: 100%;
+    }
+    
+    .line-contact {
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        border: 0.3px solid white;
+        width: 100%;
+    }
+    
+    .header-nav header h3 {
+        font-family: 'Roboto', sans-serif;
+        margin-top: 30px;
+        margin-bottom: 5px;
+        font-size: 22px;
+        font-weight: 600;
+        color: white;
+    }
+    
+    .header-nav p{
+        font-family: 'Open Sans', sans-serif;
+        margin-top: 15px;
+        margin-bottom: 30px;
+        font-size: 16px;
+        color: white;
+    }
+    
+    .header-nav p span {
+        line-height: 1.9em;
+    }
+    
+    .header-nav a {
+        color: #fff;
+        text-decoration: none;
+    }
+    
+    .header-nav a i, a span {
+        margin-right: 0px;
+        font-size: 18px;
+    
+    }
+    
+    /* .header-nav a span {
+       font-size: 20px;
+    } */
+    
+    /* Curriculum Header */
+    .center {
+        margin-top: 50px;
+    }
+    
+    .jumbotron-header .jumbotron{
+        margin-top: 0px;
+        width: 100%;
+        height: 770px;
+        border: 1px solid #DEE1E5;
+    }
+    
+    .img-jumbotron {
+        margin-bottom: 15px;
+    }
+    
+    .img-jumbotron img{
+        width: 30%;
+        height: auto;
+        border-radius: 50%;
+        border: 1px solid #2c2c2c;
+        box-shadow: 3px 3px 10px #848484;
+    }
+    
+    .jumbotron-header h2 {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 40px;
+        font-weight: 700;
+    }
+    
+    .line-jumbotron {
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 70%;
+        border: 1px solid #dcdcdc;
+    }
+    
+    .jumbotron-header p{
+        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
+    }
+    
+    /* NAVIGATION ABOUT*/
+    .navigation {
+        margin: -31px 0;
+        padding: 0;
+    }
+    
+    .navigation div h3 {
+        margin: 0;
+        padding: 16px 16px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 500;
+        font-size: 30px;
+        color: #fff;
+    }
+    
+    .navigation h3 span{
+        font-family: 'Roboto', sans-serif;
+        text-transform: uppercase;
+        font-size: 23px;
+    }
+    
+    .navigation ul li a {
+        text-transform: uppercase;
+        font-family: 'Roboto', sans-serif;
+        font-size: 20px;
+        font-weight: 400;
+        color: #fff;
+    }
+    
+    /* CONTENT ABOUT */
+    .about-content{
+        margin: 120px 0;
+        height: 380px;
+        padding: 0;
+    }
+    
+    .about-content section {
+        margin-top: 20px;
+        width: 100%;
+        padding: 0;
+    }
+    
+    .about-content i {
+        margin-left: auto;
+        margin-right: 8px;
+        margin-bottom: 2px;
+        font-size: 30px;
+        color: #121416;
+    }
+    
+    .about-content .line-about {
+        margin-left: auto;
+        margin-bottom: 20px;
+        margin-right: auto;
+        width: 280px;
+        border: 2px solid #343A40;
+    }
+    
+    .about-content h4 {
+        margin-bottom: 2px;
+        text-transform: uppercase;
+        font-family: 'Roboto', sans-serif;
+        font-size: 27px;
+        font-weight: 700;
+        color: #343a40f5;
+    }
+    
+    .about-content .especializacao {
+        margin-right: 10px;
+        font-size: 20px;
+    }
+    
+    .about-content span {
+        text-align: center;
+        font-size: 18px;
+        font-weight: 900;
+    }
+    
+    .section-about p{
+        margin-top: 0;
+        padding: 30px 0;
+    }
+    
+    /* .line-test {
+        width: 100%;
+        border: 1px solid black;
+    } */
+}
+
+
+
+
+
